--- a/resources/sass/pages/_confirm.scss
+++ b/resources/sass/pages/_confirm.scss
@@ -26,6 +26,7 @@
 
     label {
         font-family: 'Bellota Text', "TsukushiAMaruGothic";
+        text-transform: uppercase;
         color: gray;
     }
 
@@ -34,6 +35,7 @@
         border: none;
         background-color: #e9eaed;
         font-family: 'Bellota Text', "TsukushiAMaruGothic";
+        text-transform: uppercase;
         color: gray;
         border-radius: 5px;
         margin-top: .5rem;
